eks/ingress-grpc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-server-ingress-grpc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - host: "gapi.bank-server.umarhadi.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bank-server-api-service
            port:
              number: 90
  tls:
  - hosts:
    - gapi.bank-server.umarhadi.dev
    secretName: bank-server-gapi-cert
