eks/ingress-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-server-ingress-http
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "api.bank-server.umarhadi.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bank-server-api-service
            port:
              number: 80
  tls:
  - hosts:
    - api.bank-server.umarhadi.dev"
    secretName: bank-server-api-cert
