eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "bank.api.wkwkwk.fun"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bank-server-api-service
            port:
              number: 80
  tls:
  - hosts:
    - bank.api.wkwkwk.fun
    secretName: bank-server-api-cert
